https://travis-ci.org/oboehm/PatternTesting2[image:https://travis-ci.org/oboehm/PatternTesting2.svg[BuildStatus]]
https://sonarcloud.io/dashboard?id=org.patterntesting%3Apatterntesting-parent[image:https://sonarcloud.io/api/project_badges/measure?project=org.patterntesting%3Apatterntesting-parent&metric=bugs[Bugs]]
https://codecov.io/gh/oboehm/PatternTesting2/branch/develop[image:https://codecov.io/gh/oboehm/PatternTesting2/branch/develop/graph/badge.svg[CodeCov]]

= Release Notes



== 2.0 (2020)

* move from https://sourceforge.net/projects/patterntesting/[SoureForge] (CVS) to https://github.com/oboehm/PatternTesting2[GitHub] (GIT)
* ObjectTester and other XxxTester classes will no longer try to instantiate private classes
  (patterntesting-rt)


== 1.8 (11-Nov-2017)

* last version with CVS
* depends now on Java 8
* #_fixed_#: bug http://sourceforge.net/p/patterntesting/bugs/38/[#38] and http://sourceforge.net/p/patterntesting/bugs/39/[#39]


== 1.7 and earlier

* see http://www.patterntesting.com/release/index.html