@@ -20,10 +20,10 @@
       <groupId>org.patterntesting</groupId>
       <artifactId>patterntesting-tools</artifactId>
     </dependency>
-      <dependency>
-        <groupId>org.patterntesting</groupId>
-        <artifactId>patterntesting-concurrent</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>org.patterntesting</groupId>
+      <artifactId>patterntesting-concurrent</artifactId>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -53,9 +53,7 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <sonar.coverage.exclusions>
-          **/*.*
-        </sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/*.*</sonar.coverage.exclusions>
       </properties>
     </profile>
   </profiles>
