@@ -1,7 +1,5 @@
-/**
- * $Id: DontProfileMe.java,v 1.4 2016/12/10 20:55:18 oboehm Exp $
- *
- * Copyright (c) 2008 by Oliver Boehm
+/*
+ * Copyright (c) 2008-2020 by Oliver Boehm
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,9 +28,7 @@ import java.lang.annotation.*;
  * @see patterntesting.runtime.monitor.ProfileStatistic
  * @see patterntesting.runtime.monitor.ProfileStatistic
  * @see patterntesting.runtime.monitor.ProfileMonitor
- * @see patterntesting.runtime.monitor.ClasspathMonitor
- * @see patterntesting.runtime.monitor.ClasspathMonitorMBean
- * @since 24-Apr-2009
+ * @since 0.9
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ ElementType.CONSTRUCTOR, ElementType.METHOD })
