@@ -23,3 +23,14 @@ https://codecov.io/gh/oboehm/PatternTesting2/branch/develop[image:https://codeco
 == 1.7 and earlier
 
 * see http://www.patterntesting.com/release/index.html
+
+
+
+= Release Checklist
+
+This is a little checklist for deployment of the next release:
+
+. Update the Release Notes above.
+. change the version in pom.xml (remove -SNAPSHOT)
+. build all artifacts from patterntesting-parent
+  (`mvn -DskipTests -B clean install javadoc:jar repository:bundle-create gpg:sign -Dgpg.passphrase=xx`)
